eventos de mause

--- a/aula10/index.html
+++ b/aula10/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()">
-        Interaja...
+    <div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()"> <!--colocando eventos de mause na div-->
+        Interaja... 
     </div>
 
     <script src="./main.js"></script>
