--- a/aula10/index.html
+++ b/aula10/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()"> <!--colocando eventos de mause na div-->
+    <div id="area"> <!--<div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()"  para fazer diretamente no html--> 
         Interaja... 
     </div>
 
